# statex

./: .env.example  .gitignore  2check.md  DEPLOYMENT_SUMMARY.md  DEV_SCRIPTS_README.md  DYNAMIC_SUBDOMAIN_SETUP.md  DYNAMIC_SUBDOMAIN_SSL_SETUP.md  ENV_VARIABLES_CONSOLIDATION_PLAN.md  ENV_VARIABLES_CONSOLIDATION_PROPOSAL.md  KUBERNETES_README.md  PROTOTYPE_GENERATION_IMPLEMENTATION_PLAN.md  PROTOTYPE_URL_FIX_PLAN.md  README.md  SUBDOMAIN_ROUTING_AND_LOCAL_AI_DEVELOPMENT_PLAN.md  check_repo_status.sh  deploy-k8s.sh  push_all_repos.sh  push_microservices.sh  start-dev-parallel.sh  stop-dev-all.sh  test-complete-system.js  test-import.ts  test-no-redirects-final.js  test-no-redirects.js  test-subdomain-validation.js  test_form_submission.py
.github/: dependabot.yml
docs/: API_DOCUMENTATION.md  COMPREHENSIVE_HARDCODED_VALUES_MIGRATION.md  CORE_PLATFORM_SERVICES_ENV_MIGRATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_INDEX.md  DEV_SCRIPTS_README.md  DYNAMIC_SUBDOMAIN_SETUP.md  DYNAMIC_SUBDOMAIN_SSL_SETUP.md  ENVIRONMENT_VARIABLES_REFERENCE.md  FINAL_HARDCODED_VALUES_MIGRATION_SUMMARY.md  FORM_DISK_PERSISTENCE_PLAN.md  IMPLEMENTATION_PLAN_INTERNAL_URLS_AND_TELEGRAM.md  MONITORING_MAINTENANCE.md  NOTIFICATION_DNS_SERVICES_ENV_MIGRATION.md  OPENROUTER_SETUP_GUIDE.md  (+6 more)
statex-platform/: .gitignore  AI_PROTOTYPE_CREATION_SYSTEM_PLAN.md  DEPLOYMENT_SUMMARY.md  DEV_MANAGE_ENHANCEMENT_PLAN.md  Makefile  QUICK_START_DEV.md  README.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.yml  env.development.template  env.example  mock_services.py  mock_upload_service.py  prod-manage.sh  pyproject.toml  requirements.txt  services-registry.conf  setup_free_ai_platform.sh  setup_repos.sh  setup_repos_auto.sh  simple_mock_service.py  test_customer_submission.py  test_microservices_architecture.py  test_telegram_direct.py  troubleshooting-guide.md
statex-platform/.github/workflows/: cd.yml  ci.yml
statex-platform/docs/: ARCHITECTURE_DIAGRAM.md  DEPLOYMENT_SUMMARY.md  DEV_MANAGE_IMPROVEMENTS.md  NOTIFICATION_SETUP.md  PLATFORM_FREE_AI_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_START_DEV.md  README.md  api-contracts.md  architecture-diagrams.md  architecture.md  deployment.md  design-system-summary.md  development-commands.md  development-guide.md  environment-configuration.md  frontend-architecture-detailed.md  frontend-architecture.md  implementation-plan.md  infrastructure-implementation.md  microservices-separation-complete.md  microservices-separation-plan.md  production-deployment.md  prototype-creation-system.md  prototype-feedback-system.md  quick-reference.md  roadmap.md  social-media-integration.md  testing-strategy.md  ultra-fast-development-script.md  website-integration-plan.md
statex-platform/infrastructure/: README.md
statex-platform/observability/: README.md
statex-platform/observability/alertmanager/: alertmanager.yml
statex-platform/observability/loki/: index.html  loki.yml
statex-platform/observability/prometheus/: prometheus.yml
statex-platform/scripts/: deploy-full-stack.sh  deploy.sh  dev-manage.sh  health-check.sh  prod-manage.sh  production-deploy.sh  services-registry.conf  setup-dev.sh  setup.sh  setup_free_ai_platform.sh
statex-platform/services/: README.md
statex-platform/services/platform-management/: main.py  requirements.txt
statex-platform/services/prototype-service/: Dockerfile  requirements.txt
statex-platform/services/prototype-service/app/: main.py
statex-platform/shared/: http_clients.py
statex-platform/tests/: test-notifications.py  test_form_telegram_workflow.py  test_free_ai_workflow.py  test_telegram_direct.py  test_website_form_workflow.py
(+1258 files in other folders)
